--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>blueazurite</title>
+  <script src="http://cdn.peerjs.com/0.3/peer.js"></script>  
 </head>
 <body>
   <div id='app'></div>
