--- a/client/index.html
+++ b/client/index.html
@@ -7,5 +7,12 @@
 <body>
   <div id='app'></div>
   <script src='./app.bundle.js'></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+  	var socket = io();
+  	socket.on('connect', function() {
+  		console.log("Connected on the client side!");
+  	});
+  </script>
 </body>
 </html>
