chores/ added stylesheet and deleted redundant reducer

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>blueazurite</title>
+  <link rel="stylesheet" type="text/css" href="./css/style.css"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.14/peer.min.js"></script>
 </head>
 <body>
