Socket and Editor connected on server and client

--- a/client/index.html
+++ b/client/index.html
@@ -10,10 +10,10 @@
   <script src='./app.bundle.js'></script>
   <script src="/socket.io/socket.io.js"></script>
   <script>
-  	var socket = io();
-  	socket.on('connect', function() {
-  		console.log("Connected on the client side!");
-  	});
+  	// var socket = io();
+  	// socket.on('connect', function() {
+  	// 	console.log("Connected on the client side!");
+  	// });
   </script>
 </body>
 </html>
