feat/ chores/ style with bootstrap

--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>blueazurite</title>
+  <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"></script>
   <link rel="stylesheet" type="text/css" href="./css/style.css"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.14/peer.min.js"></script>
+  <script src="https://repl.it/lib/api.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
   <div id='app'></div>
