--- a/client/index.html
+++ b/client/index.html
@@ -2,20 +2,18 @@
 <html>
 <head>
   <title>blueazurite</title>
-  <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"></script>
-  <link rel="stylesheet" type="text/css" href="./css/style.css"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.14/peer.min.js"></script>
-  <script src="https://repl.it/lib/api.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+
 </head>
 <body>
   <div id='app'></div>
+  <!-- <div id='editor'></div> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.14/peer.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+
+  <script src="./lib/codeblock.js"></script>
   <script src='./app.bundle.js'></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-  	// var socket = io();
-  	// socket.on('connect', function() {
-  	// 	console.log("Connected on the client side!");
-  	// });
-  </script>
 </body>
 </html>
