--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id='app'></div>
-  <!-- <div id='editor'></div> -->
+  <script src="https://cdn.webrtc-experiment.com:443/getScreenId.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.14/peer.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 
