--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,10 @@
   <div id='app'></div>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.14/peer.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <!-- possibly move these to be compiled with webpack? -->
+  <script src="./lib/bootstrap.min.js"></script>
+  <script src="./lib/bootbox.min.js"></script>
   <script src="./lib/codeblock.js"></script>
   <script src='./app.bundle.js'></script>
 </body>
